influxdb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: devops-monitoring
  labels:
    app.kubernetes.io/name: influxdb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: influxdb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: influxdb
    spec:
      securityContext:
        runAsUser: 1000  # Ejecutar como usuario ubuntu
        runAsGroup: 1000 # Grupo ubuntu
        fsGroup: 1000    # Asegura permisos de grupo para volúmenes
      containers:
      - name: influxdb
        image: influxdb:1.11.8
        imagePullPolicy: IfNotPresent
        args: ["-config", "/etc/influxdb/influxdb.conf"]
        ports:
          - containerPort: 8086
        volumeMounts:
          - name: influxdb-data
            mountPath: /var/lib/influxdb
          - name: influxdb-config
            mountPath: /etc/influxdb/influxdb.conf
            subPath: influxdb.conf
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
      volumes:
        - name: influxdb-data
          hostPath:
            path: /data/influxdb
            type: DirectoryOrCreate
        - name: influxdb-config
          configMap:
            name: influxdb-config
