influxdb/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: devops-monitoring
  labels:
    app.kubernetes.io/name: influxdb
spec:
  type: NodePort
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 8086
      targetPort: 8086
      protocol: TCP
      nodePort: 30003
  sessionAffinity: None
  internalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: influxdb
